work with comments with first corrections